scrollbar in the middle fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,7 +31,7 @@
   }
 }
 
-mat-sidenav-container {
+.page-wrapper {
   max-width: 1600px;
 }
 
